<resources>
    <string name="app_name">Quantuity Analytics</string>
    
    <!-- Main menu buttons texts -->
    <string name="menu_button_break_test">Perform pre-trip break test</string>
    <string name="menu_button_issue">Report pre-trip vehicle issue to dispatch</string>
    <string name="menu_button_break_knowledge">Driver break knowledge review \u0026 quiz</string>
    <string name="menu_button_inspection_report">Pre-trip inspection reports history</string>
    <string name="menu_button_test_knowledge">Driver road test knowledge review \u0026 quiz</string>
    <string name="menu_button_real_time">Live break monitor in real-time</string>
    <string name="button_close">Close</string>
    <string name="button_menu">Main Menu</string>
    <string name="button_next">Next</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_skip">Skip</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_scan">Scan</string>
    <string name="button_settings">Settings</string>
    <string name="btn_delete">Delete File</string>
    <string name="btn_export">Export File</string>
    <string name="btn_files">Files</string>
    <string name="btn_repeat">Repeat</string>
    <string name="btn_save">Save Test Results</string>
    <string name="btn_connect_all">Connect All</string>

    <!-- Test steps description -->
    <string name="test_description_1">Procedure: You will step on the break pedal, wait 5 seconds, then release. A confirmation will be presented at the end of the test for each wheel below in green (pass) or red (fail).</string>
    <string name="test_description_2">The sensors and their location at each wheel are indicated below in yellow black circles. After the test is complete, they will indicate greet (pass) or red (fail) for one or more wheel on your vehicle.</string>
    <string name="test_description_3">Procedure: You will step on the break pedal, wait 5 seconds, then release. A confirmation will be presented for each wheel below in green (pass) or red (fail).</string>

    <!-- Test steps-->
    <string name="step_1">Prepare to apply the brake pedal fully and release it fully. Hold for 10 seconds then release.</string>
    <string name="step_2">Prepare to apply the brake pedal fully and release it fully. Hold for 10 seconds then release.</string>
    <string name="step_3">Prepare to apply the brake pedal fully and release it fully. Hold for 10 seconds then release.</string>
    <string name="step_4">Break test step 4</string>
    <string name="step_5">Break test step 5</string>
    <string name="step_6">Break test step 6</string>

    <!-- Titles-->
    <string name="break_test">Break Test</string>
    <string name="break_test_devices">List of devices</string>
    <string name="break_test_scanning">Scanning</string>
    <string name="break_test_start">Press Scan to connect to the sensors</string>
    <string name="title_main_menu">Main menu</string>
    <string name="title_settings_files">File Management</string>
    <string name="title_settings_sensors">Sensors Management</string>
    <string name="title_settings_list_of_files">List of files</string>
    <string name="title_settings_list_of_records">Records in file</string>
    <string name="title_real_time_test">Real Time Test</string>

    <!-- Views description -->
    <string name="empty_device_list">No Bluetooth device was founded</string>
    <string name="test_step_description">Image to describe the actual test step</string>
    <string name="image_description_sensor">Sensor icon</string>
    <string name="image_description_test_record_value">Result of the test</string>
    <string name="icon_description_file">File icon</string>
    <string name="list_of_files_description">Select a file in the list below to see the all the records, after you´ll be able to export them</string>
    <string name="list_of_records_description">Select a file in the left panel. All the records in one file belong to a test performed previously, you can export the files to CSV file or delete the file from this device to save storage space</string>
    <string name="settings_sensors_description">In this screen you can save the Mac Address of all the bluetooth devices to connect to during the tests</string>
    <string name="description_fab_sensors">Sensor Management Floating Button</string>
    <string name="image_description_logo">Company logo</string>

    <!-- Menu items -->
    <string name="menu_sensors">Sensors</string>
    <string name="menu_files">Files</string>
    <string name="menu_values">Values</string>
    <string name="title_settings_values">Setting\'s values</string>
    <string name="hint_truck_id">Truck id</string>
    <string name="Instruction_group_address">List of MAC Addresses in this group</string>
    <string name="step_warning">Air pressure should be 100 PSI before start the test</string>
    <string name="copyright">All rights reserved</string>
    <string name="button_simulation">Simulation</string>

    <string-array name="ml_models">
        <item>4 values model</item>
        <item>2 values model</item>
    </string-array>
</resources>