<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/title"
        android:text="@string/title_settings_list_of_records"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        android:id="@+id/records"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textStyle="italic|bold"
        android:text="@string/list_of_records_description"
        android:letterSpacing="0.1"
        android:background="@color/light_gray"
        android:scrollbars="vertical|horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/buttonsLayout"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:text="@string/btn_delete"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_export"
            android:text="@string/btn_export"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>