<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_close"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/button_close"
        android:drawableEnd="@drawable/baseline_close_24"
        android:drawableTint="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:id="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/step_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.45"
        android:src="@drawable/break_pedal_1"
        android:contentDescription="@string/test_step_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/step_warning"
        android:text="@string/step_warning"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/step_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/step_description"
        app:layout_constraintTop_toBottomOf="@+id/step_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="16sp"
        android:id="@+id/step_result_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_description"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        android:gravity="center"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_result_text"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_test"
            android:text="@string/button_start"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/baseline_play_outline_24"
            android:backgroundTint="@color/red"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_repeat"
            android:text="@string/btn_repeat"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/baseline_repeat_24"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_next"
            android:text="@string/button_next"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/baseline_arrow_forward_24"
            app:iconGravity="end"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>