<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/title"
        android:text="@string/break_test_devices"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginVertical="20dp"
        app:lottie_rawRes="@raw/animation_bluetooth"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="80dp"
        android:id="@+id/device_list"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:text="@string/break_test_scanning"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_margin="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_scan"
        android:text="@string/button_start"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>