<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingHorizontal="40dp"
    android:paddingVertical="20dp"
    tools:context=".TestActivityDescription">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp"
            android:text="@string/button_menu"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_arrow_back_24"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconSize="24dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/break_test"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="24sp"
            android:autoSizeMaxTextSize="44sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_margin="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp"
            android:text="@string/button_skip"
            android:textSize="18sp"
            app:icon="@drawable/baseline_double_arrow_right_24"
            app:iconSize="24dp"
            app:iconGravity="end"/>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.7"
        android:layout_marginHorizontal="40dp"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@android:color/darker_gray"
        app:dotsCornerRadius="8dp"
        app:dotsSize="18dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:selectedDotColor="@color/primary"
        app:progressMode="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/controllerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/button_next"
        android:textSize="22sp"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        app:layout_constraintTop_toTopOf="@id/viewPager"
        app:layout_constraintBottom_toBottomOf="@id/viewPager"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>