<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/name_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/group_name"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_edit"
            android:src="@drawable/baseline_edit_24"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/borderer_file_background"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/btn_delete"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btn_delete"
            android:src="@drawable/baseline_delete_24"
            android:background="@drawable/borderer_file_background"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/btn_delete"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:text="@string/Instruction_group_address"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycleView"
        app:layout_constraintTop_toBottomOf="@id/instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_fab_sensors"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/primary_light"
        android:layout_margin="16dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="top|end"/>


</androidx.constraintlayout.widget.ConstraintLayout>